--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                 <button class="book-a-call">
                     <a href="https://calc.com" target="_blank">Book a Call</a>
                 </button>
+                <button class="book-a-call-mobile">
+                    <a href="https://calc.com" target="_blank"><img src="images/calendar.svg" alt="Book a call"></a>
+                </button>
             </div>
         </div>
     </header>
