--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a href="https://calc.com" target="_blank">Book a Call</a>
                 </button>
                 <button class="book-a-call-mobile">
-                    <a href="https://calc.com" target="_blank"><img src="images/calendar.svg" alt="Book a call"></a>
+                    <a href="https://calc.com" target="_blank"><img src="images/calendar.png" alt="Book a call"></a>
                 </button>
             </div>
         </div>
