--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <h1>Kwesi is solving problems through strategic design and compelling visuals.</h1>
                     </div>
                     <div class="inner-container right">
-                        <p>As a digital product designer with a strong focus on visual design and Framer websites, he collaborates closely with teams to craft seamless, user-centered experiences. A reliable partner in bringing ideas to life</p>
+                        <p>As a digital product designer with a strong focus on visual design and websites, I collaborate closely with teams to craft seamless, user-centered experiences.</p>
                         <a href="projects.html" class="btn btn-light" style="margin-top: 30px;">View My Work</a>
                     </div>
                 </div>
