--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects - Jane Doe</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -69,10 +71,21 @@
             </div>
         </div>
     </section>
+    <!--START OF GET IN TOUCH-->
+<section class="section alt">
+    <div id="in-touch" class="container">
+        <h2>Let's work together</h2>
+        <p>Let’s build something impactful together—whether it’s your brand, your website, or your next big idea.</p>
+        <a class="btn btn-dark" href="mailto:hello@nerdcreatives.me" target="_blank">Send a mail</a>
+    </div>
+</section>
+
+<!--END OF GIT-->
+
 
     <footer>
         <div class="container">
-            <p>&copy; 2026 Jane Doe. All rights reserved.</p>
+            <p>&copy; 2026 agyekum™ Kwesi. All rights reserved.</p>
         </div>
     </footer>
 
