--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects - Jane Doe</title>
+    <title>Projects - agyekum™</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
@@ -11,15 +11,28 @@
 <body>
 
     <header>
-        <div class="container">
+        <div id="header" class="container-wide">
+            <div class="branding">
+                <a href="index.html"> agyekum™
+                <!--   <img class="logo" src="images/logo.jpg" alt="Agyekum Kwesi"; > -->
+                </a>
+            </div>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                <!--<li><a href="index.html" class="active">Home</a></li> -->
+                    <li><a href="projects.html">Projects</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="projects.html" class="active">Projects</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
+            <div>
+                <button class="book-a-call">
+                    <a href="https://calc.com" target="_blank">Book a Call</a>
+                </button>
+                <button class="book-a-call-mobile">
+                    <a href="https://calc.com" target="_blank"><img src="images/calendar.svg" alt="Book a call"></a>
+                </button>
+            </div>
         </div>
     </header>
 
