--- a/contact.html
+++ b/contact.html
@@ -11,15 +11,28 @@
 <body>
 
     <header>
-        <div class="container">
+        <div id="header" class="container-wide">
+            <div class="branding">
+                <a href="index.html"> agyekum™
+                <!--   <img class="logo" src="images/logo.jpg" alt="Agyekum Kwesi"; > -->
+                </a>
+            </div>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
+                <!--<li><a href="index.html" class="active">Home</a></li> -->
                     <li><a href="projects.html">Projects</a></li>
-                    <li><a href="contact.html" class="active">Contact</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
+            <div>
+                <button class="book-a-call">
+                    <a href="https://calc.com" target="_blank">Book a Call</a>
+                </button>
+                <button class="book-a-call-mobile">
+                    <a href="https://calc.com" target="_blank"><img src="images/calendar.svg" alt="Book a call"></a>
+                </button>
+            </div>
         </div>
     </header>
 
