--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - agyekum™</title>
+    <title>Contact - Jane Doe</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body id="contact-page">
 
     <header>
         <div id="header" class="container-wide">
@@ -36,7 +36,7 @@
         </div>
     </header>
 
-    <section class="hero" style="padding: 120px 20px 80px;">
+    <section  class="hero contact-me" style="padding: 30px 20px 30px;">
         <div class="container">
             <h1>Get In Touch</h1>
             <p>I'd love to hear from you</p>
@@ -45,25 +45,19 @@
 
     <section class="section">
         <div class="container">
-            <div style="max-width: 800px; margin: 0 auto;">
-                <form action="#" method="POST" style="background: #ffffff; padding: 40px; border: 1px solid #dddddd; border-radius: 8px;">
+            <div style="max-width: 700px; margin: 0 auto;">
+                <form action="#" method="POST" style="background: #f7f7f7; padding: 40px;  border-radius: 25px;">
                     <label for="name" style="display: block; margin-bottom: 8px; font-weight: bold;">Name</label>
-                    <input type="text" id="name" name="name" required style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #cccccc; border-radius: 4px;">
+                    <input type="text" id="name" name="name" required style="width: 100%; padding: 12px; margin-bottom: 20px; border-radius: 12px; border: 1px solid #ccc;">
 
                     <label for="email" style="display: block; margin-bottom: 8px; font-weight: bold;">Email</label>
-                    <input type="email" id="email" name="email" required style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #cccccc; border-radius: 4px;">
+                    <input type="email" id="email" name="email" required style="width: 100%; padding: 12px; margin-bottom: 20px; border-radius: 12px; border: 1px solid #ccc;">
 
                     <label for="message" style="display: block; margin-bottom: 8px; font-weight: bold;">Message</label>
-                    <textarea id="message" name="message" rows="8" required style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #cccccc; border-radius: 4px; resize: vertical;"></textarea>
+                    <textarea id="message" name="message" rows="8" required style="width: 100%; padding: 12px; margin-bottom: 20px; border-radius: 12px; border: 1px solid #ccc; resize: vertical;"></textarea>
 
-                    <button type="submit" class="btn" style="width: 100%; padding: 14px; font-size: 18px;">Send Message</button>
+                    <button type="submit" class="btn btn-dark" style="width: 100%; padding: 14px; font-size: 18px;">Send Message</button>
                 </form>
-
-                <div style="text-align: center; margin-top: 50px;">
-                    <p><strong>Email:</strong> jane.doe@email.com</p>
-                    <p><strong>LinkedIn:</strong> linkedin.com/in/janedoe</p>
-                    <p><strong>GitHub:</strong> github.com/janedoe</p>
-                </div>
             </div>
         </div>
     </section>
