--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agyekum Kwesi - Portfolio</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -28,7 +30,7 @@
                     <a href="https://calc.com" target="_blank">Book a Call</a>
                 </button>
                 <button class="book-a-call-mobile">
-                    <a href="https://calc.com" target="_blank"><img src="images/calendar.png" alt="Book a call"></a>
+                    <a href="https://calc.com" target="_blank"><img src="images/calendar.svg" alt="Book a call"></a>
                 </button>
             </div>
         </div>
@@ -46,7 +48,7 @@
                         <h1>Kwesi is solving problems through strategic design and compelling visuals.</h1>
                     </div>
                     <div class="inner-container right">
-                        <p>As a digital product designer with a strong focus on visual design and websites, I collaborate closely with teams to craft seamless, user-centered experiences.</p>
+                        <p>As a digital product designer with a strong focus on visual design and Framer websites, he collaborates closely with teams to craft seamless, user-centered experiences. A reliable partner in bringing ideas to life</p>
                         <a href="projects.html" class="btn btn-light" style="margin-top: 30px;">View My Work</a>
                     </div>
                 </div>
@@ -67,7 +69,7 @@
                     <div class="project-info">
                         <h3>SeedPad Dev</h3>
                         <p>Urban Real Estate Company</p>
-                        <a href="projects.html#ecommerce" class="btn">View Details</a>
+                        <a href="https://nerdcreatives.me" target="_blank" class="btn btn-dark">View Project</a>
                     </div>
                 </div>
                 <!--PROJECT 02-->
@@ -76,7 +78,7 @@
                     <div class="project-info">
                         <h3>Power Diversity</h3>
                         <p>Girl Power Movement & Community</p>
-                        <a href="projects.html#taskapp" class="btn">View Details</a>
+                        <a href="https://nerdcreatives.me" target="_blank" class="btn btn-dark">View Project</a>
                     </div>
                 </div>
                 <!--PROJECT 03-->
@@ -85,7 +87,7 @@
                     <div class="project-info">
                         <h3>Space Model</h3>
                         <p> Exclusive 3D creative workspace</p>
-                        <a href="projects.html#taskapp" class="btn">View Details</a>
+                        <a href="https://nerdcreatives.me" target="_blank" class="btn btn-dark">View Project</a>
                     </div>
                 </div>
                 <!--PROJECT 04-->
@@ -94,7 +96,7 @@
                     <div class="project-info">
                         <h3>Healthcare App</h3>
                         <p>Reburst Healthcare Companion</p>
-                        <a href="projects.html#taskapp" class="btn">View Details</a>
+                        <a href="https://nerdcreatives.me" target="_blank" class="btn btn-dark">View Project</a>
                     </div>
                 </div>
             </div>
@@ -158,7 +160,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2026 Jane Doe. All rights reserved.</p>
+            <p>&copy; 2026 agyekum™ Kwesi. All rights reserved.</p>
         </div>
     </footer>
 
