--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
             </nav>
             <div>
                 <button class="book-a-call">
-                    <a href="https://calc.com" target="_blank">Book a Call</a>
+                    <a href="https://cal.com/nerd-creatives-1n2yuy" target="_blank">Book a Call</a>
                 </button>
                 <button class="book-a-call-mobile">
                     <a href="https://calc.com" target="_blank"><img src="images/calendar.png" alt="Book a call"></a>
