--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             <div class="status--circle"></div>
                             <span>Available for work</span>
                         </div>
-                        <h1>Kwesi is solving problems through strategic design and compelling visuals.</h1>
+                        <h1>agyekum™ is solving problems through strategic design and compelling visuals.</h1>
                     </div>
                     <div class="inner-container right">
                         <p>As a digital product designer with a strong focus on visual design and Framer websites, he collaborates closely with teams to craft seamless, user-centered experiences. A reliable partner in bringing ideas to life</p>
