--- a/about.html
+++ b/about.html
@@ -117,6 +117,22 @@
             </div>
         </div>
     </section>
+<!--RESOURCES SECTION-->
+    <section  id="dark-section" class="section alt">
+        <div id="resources" class="container section-title">
+            <div class="resource-box">
+                <div>
+                    <img src="images/thumb-up.png" alt="Thumbs Up" >
+                    <h2>Free Useful Resources</h2>
+                    <p>Browse my pool of resources, carefully curated for you and your brand</p>
+                </div>
+                <div class="resource-btn">
+                    <a href="resources.html" class="btn btn-light" >Browse resources</a>
+                </div>
+            </div>
+        </div>
+
+    </section>
 
     <!--START OF GET IN TOUCH-->
 <section class="section alt">
