--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             </nav>
             <div>
                 <button class="book-a-call">
-                    <a href="https://cal.com/nerd-creatives-1n2yuy" target="_blank">Book a Call</a>
+                    <a href="https://calc.com" target="_blank">Book a Call</a>
                 </button>
                 <button class="book-a-call-mobile">
-                    <a href="https://cal.com/nerd-creatives-1n2yuy" target="_blank"><img src="images/calendar.svg" alt="Book a call"></a>
+                    <a href="https://calc.com" target="_blank"><img src="images/calendar.svg" alt="Book a call"></a>
                 </button>
             </div>
         </div>
@@ -45,7 +45,7 @@
                             <div class="status--circle"></div>
                             <span>Available for work</span>
                         </div>
-                        <h1>agyekum™ is solving problems through strategic design and compelling visuals.</h1>
+                        <h1>Kwesi is solving problems through strategic design and compelling visuals.</h1>
                     </div>
                     <div class="inner-container right">
                         <p>As a digital product designer with a strong focus on visual design and Framer websites, he collaborates closely with teams to craft seamless, user-centered experiences. A reliable partner in bringing ideas to life</p>
