--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             </nav>
             <div>
                 <button class="book-a-call">
-                    <a href="https://calc.com" target="_blank">Book a Call</a>
+                    <a href="https://cal.com/nerd-creatives-1n2yuy" target="_blank">Book a Call</a>
                 </button>
                 <button class="book-a-call-mobile">
-                    <a href="https://calc.com" target="_blank"><img src="images/calendar.svg" alt="Book a call"></a>
+                    <a href="https://cal.com/nerd-creatives-1n2yuy" target="_blank"><img src="images/calendar.svg" alt="Book a call"></a>
                 </button>
             </div>
         </div>
