--- a/about.html
+++ b/about.html
@@ -67,6 +67,7 @@
                 <div class="about-text">
                     <h2>My Stacks</h2>
                     <ul class="outer-stack" style="list-style: none; margin-top: 10px;">
+                        <!--STACK 01-->
                         <li class="stack ">
                             <div class="stack-box stack-box-active">
                                 <img src="images/photoshop.png" alt="Photoshop">
@@ -76,6 +77,7 @@
                                 </div>
                             </div>
                         </li>
+                        <!--STACK 02-->
                         <li class="stack ">
                             <div class="stack-box">
                                 <img src="images/figma.avif" alt="Wordpress">
@@ -85,6 +87,7 @@
                                 </div>
                             </div>
                         </li>
+                        <!--STACK 03-->
                         <li class="stack ">
                             <div class="stack-box">
                                 <img src="images/wordpress.png" alt="Wordpress">
@@ -94,6 +97,7 @@
                                 </div>
                             </div>
                         </li>
+                        <!--STACK 04-->
                          <li class="stack ">
                             <div class="stack-box">
                                 <img src="images/illustrator.png" alt="Wordpress">
@@ -103,6 +107,7 @@
                                 </div>
                             </div>
                         </li>
+                        <!--STACK 05-->
                         <li class="stack ">
                             <div class="stack-box">
                                 <img src="images/contra.avif" alt="Wordpress">
