--- a/resources.html
+++ b/resources.html
@@ -93,6 +93,10 @@
 
 
     <footer>
+        <div style="padding-bottom: 10px;">
+            <img style="width: 40px; margin: 0 auto; padding-bottom: 10px;" src="images/thumb-up.png" alt="Thumbs Up" >
+            <a href="resources.html" title="Get access to useful resources">Get Free Resources</a>
+        </div>
         <div class="container">
             <p>&copy; 2026 agyekum™ Kwesi. All rights reserved.</p>
         </div>
