--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
     <section class="section">
         <div class="container">
             <div style="max-width: 700px; margin: 0 auto;">
-                <form action="#" method="POST" style="background: #f7f7f7; padding: 40px;  border-radius: 25px;">
+                <form action="https://formsubmit.co/nerdcreatives@gmail.com" method="POST" style="background: #f7f7f7; padding: 40px;  border-radius: 25px;">
                     <label for="name" style="display: block; margin-bottom: 8px; font-weight: bold;">Name</label>
                     <input type="text" id="name" name="name" required style="width: 100%; padding: 12px; margin-bottom: 20px; border-radius: 12px; border: 1px solid #ccc;">
 
