--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <section id="dark-section" class="section alt">
     <div class="container section-title">
          <h2 class="light">My Services</h2>
-        <a href="projects.html" class="btn btn-light">All Projects</a>
+        <a href="about.html" class="btn btn-light">About me</a>
     </div>
     <div id="services" class="container">
         <div id="thirds" class="grid thirds">
