--- a/thanks.html
+++ b/thanks.html
@@ -50,6 +50,7 @@
     <div id="in-touch" class="container">
         <h2>Let's work together</h2>
         <p>Let’s build something impactful together—whether it’s your brand, your website, or your next big idea.</p>
+        <img class="recieved" src="images/inbox.svg" alt="Received" >
         <a class="btn btn-dark" href="mailto:hello@nerdcreatives.me" target="_blank">Send a mail</a>
     </div>
 </section>
