--- a/thanks.html
+++ b/thanks.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body id="contact-page">
+<body id="thanks-page">
 
     <header>
         <div id="header" class="container-wide">
@@ -47,13 +47,13 @@
 
 
     <!--START OF GET IN TOUCH-->
-<section class="section alt">
+<!--<section class="section alt">
     <div id="in-touch" class="container">
         <h2>Let's work together</h2>
         <p>Let’s build something impactful together—whether it’s your brand, your website, or your next big idea.</p>
         <a class="btn btn-dark" href="mailto:hello@nerdcreatives.me" target="_blank">Send a mail</a>
     </div>
-</section>
+</section>-->
 
 <!--END OF GIT-->
 
