--- a/resources.html
+++ b/resources.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects - agyekum™</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -73,6 +73,36 @@
                         <div class="resource-info">
                             <h3>6 Common (But Costly) Google Ads Mistakes</h3>
                             <p>See six of the most common mistakes marketers make in Google Ads and learn how to avoid them.</p>
+                        </div>
+                    </a>
+                </div>
+                <!--RESOURCE 04-->
+                <div class="resource-card">
+                    <a href="https://www.thewalk.au/how-to-write-the-ultimate-marketing-plan/" target="_blank">
+                        <img src="https://www.thewalk.au/media/5896-guide-marketing-plans-that-work-1.jpg" alt="5896-guide-marketing-plans-that-work">
+                        <div class="resource-info">
+                            <h3>How to write the ultimate marketing plan</h3>
+                            <p>A totally doable and effective way to take your marketing to the next level.</p>
+                        </div>
+                    </a>
+                </div>
+                <!--RESOURCE 05-->
+                <div class="resource-card">
+                    <a href="https://www.outliercreative.com/blog/ecommerce-branding-101" target="_blank">
+                        <img src="https://cdn.prod.website-files.com/619626b75c00e7698d8d88ca/62dad55156aa1375da0dad90_Ecommerce%20Branding%20101.jpg" alt="5896-guide-marketing-plans-that-work">
+                        <div class="resource-info">
+                            <h3>Ecommerce Branding, Strategies, and Tips</h3>
+                            <p>A well-executed ecommerce branding strategy drives profit, reduces customer acquisition..</p>
+                        </div>
+                    </a>
+                </div>
+                <!--RESOURCE 06-->
+                <div class="resource-card">
+                    <a href="https://offers.hubspot.com/full-stack-ai-marketing?hubs_signup-url=www.hubspot.com/resources/marketing/pdf&hubs_signup-cta=resource-library-featured-resources-card-link" target="_blank">
+                        <img src="https://www.hubspot.com/hubfs/Marketing%20Against%20the%20Grain%20Full%20Stack%20Kit.webp" alt="https://offers.hubspot.com/full-stack-ai-marketing?hubs_signup-url=www.hubspot.com/resources/marketing/pdf&hubs_signup-cta=resource-library-featured-resources-card-link">
+                        <div class="resource-info">
+                            <h3>20 Prompts to Scale Your Marketing</h3>
+                            <p>Maximize your marketing impact with minimal resources using this collection of battle-tested AI prompts.</p>
                         </div>
                     </a>
                 </div>
