--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,7 @@
     <title>Projects - agyekum™</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" href="images/logo.jpg">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body id="project-page">
