--- a/contact.html
+++ b/contact.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - agyekum™</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="icon" type="image/png" href="images/logo.jpg">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body id="contact-page">
@@ -46,20 +45,17 @@
 
     <section class="section">
         <div class="container">
-            <div style="max-width: 600px; margin: 0 auto;">
-                <form action="https://formsubmit.co/nerdcreatives@gmail.com" method="POST" style="background: #f7f7f7; padding: 40px;  border-radius: 25px;">
+            <div style="max-width: 700px; margin: 0 auto;">
+                <form action="#" method="POST" style="background: #f7f7f7; padding: 40px;  border-radius: 25px;">
                     <label for="name" style="display: block; margin-bottom: 8px; font-weight: bold;">Name</label>
-                    <input type="text" id="name" name="name" required style="width: 100%; padding: 12px; margin-bottom: 20px; border-radius: 12px; border: 1px solid #ccc;">
+                    <input type="text" id="name" name="name" required style="width: 100%; padding: 12px; margin-bottom: 20px; border-radius: 12px; border: 2px solid #ccc;">
 
                     <label for="email" style="display: block; margin-bottom: 8px; font-weight: bold;">Email</label>
-                    <input type="email" id="email" name="email" required style="width: 100%; padding: 12px; margin-bottom: 20px; border-radius: 12px; border: 1px solid #ccc;">
+                    <input type="email" id="email" name="email" required style="width: 100%; padding: 12px; margin-bottom: 20px; border-radius: 12px; border: 2px solid #ccc;">
 
                     <label for="message" style="display: block; margin-bottom: 8px; font-weight: bold;">Message</label>
-                    <textarea id="message" name="message" rows="8" required style="width: 100%; padding: 12px; margin-bottom: 20px; border-radius: 12px; border: 1px solid #ccc; resize: vertical;"></textarea>
-                    <input type="hidden" name="_next" value="https://nerdcreatives.github.io/portfolio/thanks.html"> <!-- Custom thank you page -->
-                    <input type="hidden" name="_captcha" value="false"> <!-- This disables captcha -->
-                    <input type="hidden" name="_autoresponse" value="Thank you! I'll get back to you soon."> <!-- This Auto-reply visitors -->
-                    
+                    <textarea id="message" name="message" rows="8" required style="width: 100%; padding: 12px; margin-bottom: 20px; border-radius: 12px; border: 2px solid #ccc; resize: vertical;"></textarea>
+
                     <button type="submit" class="btn btn-dark" style="width: 100%; padding: 14px; font-size: 18px;">Send Message</button>
                 </form>
             </div>
