--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
                 </ul>
             </nav>
             <div>
-                <button class="book-a-call">
+                <button class="btn btn-dark book-a-call">
                     <a href="https://cal.com/nerd-creatives-1n2yuy" target="_blank">Book a Call</a>
                 </button>
                 <button class="book-a-call-mobile">
